# Rag_document_chatbot

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
app/: generator.py  ingest.py  rag_graph.py  retriever.py
data/: input.txt
